<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewLength1"
        android:layout_width="83dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:labelFor="@+id/editTextLength1"
        android:text="@string/length1"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/length1" />

    <TextView
        android:id="@+id/textViewLength2"
        android:layout_width="83dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:labelFor="@+id/editTextLength2"
        android:text="@string/length2"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLength1" />

    <EditText
        android:id="@+id/editTextLength1"
        android:layout_width="217dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/nullstring"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewLength1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextLength2"
        android:layout_width="217dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/nullstring"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewLength2"
        app:layout_constraintTop_toBottomOf="@+id/editTextLength1" />

    <ImageView
        android:id="@+id/imageViewTriangle"
        android:layout_width="93dp"
        android:layout_height="77dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="88dp"
        android:contentDescription="@string/triangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLength1"
        app:srcCompat="@drawable/triangle" />

    <ImageView
        android:id="@+id/imageViewSquare"
        android:layout_width="79dp"
        android:layout_height="77dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/square"
        app:layout_constraintEnd_toStartOf="@+id/imageViewCircle"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toEndOf="@+id/imageViewTriangle"
        app:layout_constraintTop_toBottomOf="@+id/editTextLength1"
        app:srcCompat="@drawable/square" />

    <ImageView
        android:id="@+id/imageViewCircle"
        android:layout_width="79dp"
        android:layout_height="77dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLength1"
        app:srcCompat="@drawable/circle" />

    <TextView
        android:id="@+id/textViewShape"
        android:layout_width="178dp"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/textViewImageSelected"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSquare" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="124dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/buttonCalculate"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewShape" />

    <TextView
        android:id="@+id/result"
        android:layout_width="178dp"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/textViewdisplay"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/clearbutton"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

</android.support.constraint.ConstraintLayout>